change travis CI file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - export MSMTHOME=`pwd`
   - export MSMTBINDIR=$MSMTHOME/bin
   - export PATH=$MSMTHOME/bin:$PATH
+  - export PYTHON=python
   - make installalone
 
 script:
