--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ python:
   - "2.6"
   - "2.7"
 
+before_install:
+  - sudo apt-get install python-scipy
+  - sudo apt-get install python-numpy
+
 install:
   - export MSMTHOME=`pwd`
   - export MSMTBINDIR=$MSMTHOME/bin
