--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ python:
   - "2.6"
   - "2.7"
 
+virtualenv:
+  system_site_packages: true
+
 before_install:
-  - sudo apt-get install python-scipy
-  - sudo apt-get install python-numpy
+  - sudo apt-get install python-scipy python-numpy
 
 install:
   - export MSMTHOME=`pwd`
