--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,9 @@ addons:
         packages:
             - scipy
             - numpy
-
-env:
-    matrix:
-        - PYTHON_VERSION=2.6
-        - PYTHON_VERSION=2.7
+python:
+    - "2.6"
+    - "2.7"
 
 install:
     - export MSMTHOME=`pwd`
