--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ sudo: false
 
 env:
     matrix:
-        - PYTHON_VERSION=2.6
+        #- PYTHON_VERSION=2.6
         - PYTHON_VERSION=2.7
 
 addons:
