--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,18 @@ sudo: false
 
 env:
     matrix:
-        #- PYTHON_VERSION=2.6
+        - PYTHON_VERSION=2.6
         - PYTHON_VERSION=2.7
+        - PYTHON_VERSION=3.2
+        - PYTHON_VERSION=3.3
         - PYTHON_VERSION=3.4
 
 addons:
     apt:
         sources:
             - ubuntu-toolchain-r-test
+        packages:
+            - gcc-4.8
 
 install:
     - source devtools/travis-ci/setup_env.sh
